updates to html file

--- a/finalProject.html
+++ b/finalProject.html
@@ -5,7 +5,7 @@
     <style>
         /* styling for body */
         body {
-            background-color: #aeaeae98; /* Change to the desired background color */
+            background-color: #aeaeae98;
         }
         /* center text */
         .center {
@@ -68,145 +68,144 @@
         </div>
     </div>
 
-    <form id="plan">
-        <div class="center">
-            <!-- personal information labels -->
-            <br><br>
-            <label for="name">Name:</label>
-            <input type="text" id="name">
-            <br><br>
-            <label for="email">Email (required):</label>
-            <input type="text" id="email">
-            <br><br>
-            <label for="goal">Goal for the Week:</label>
-            <input type="text" id="goal">
-            <br><br>
+    <div class="center">
+        <!-- personal information labels -->
+        <br><br>
+        <label for="name">Name:</label>
+        <input type="text" id="name">
+        <br><br>
+        <label for="email">Email (required):</label>
+        <input type="text" id="email">
+        <br><br>
+        <label for="goal">Goal for the Week:</label>
+        <input type="text" id="goal">
+        <br><br>
 
-            <h2>Meal Plan for the Week</h2>
-            <!-- monday labels -->
-            <label for="monBreakfast">Monday Breakfast:</label>
-            <input type="text" id="monBreakfast">
-            <br><br>
-            <label for="monSnack1">Monday Snack 1:</label>
-            <input type="text" id="monSnack1">
-            <br><br>
-            <label for="monLunch">Monday Lunch:</label>
-            <input type="text" id="monLunch">
-            <br><br>
-            <label for="monSnack2">Monday Snack 2:</label>
-            <input type="text" id="monSnack2">
-            <br><br>
-            <label for="monDinner">Monday Dinner:</label>
-            <input type="text" id="monDinner">
-            <br><br>
+        <h2>Meal Plan for the Week</h2>
+        <!-- monday labels -->
+        <label for="monBreakfast">Monday Breakfast:</label>
+        <input type="text" id="monBreakfast">
+        <br><br>
+        <label for="monSnack1">Monday Snack 1:</label>
+        <input type="text" id="monSnack1">
+        <br><br>
+        <label for="monLunch">Monday Lunch:</label>
+        <input type="text" id="monLunch">
+        <br><br>
+        <label for="monSnack2">Monday Snack 2:</label>
+        <input type="text" id="monSnack2">
+        <br><br>
+        <label for="monDinner">Monday Dinner:</label>
+        <input type="text" id="monDinner">
+        <br><br>
 
-            <!-- tuesday labels -->
-            <label for="tueBreakfast">Tuesday Breakfast:</label>
-            <input type="text" id="tueBreakfast">
-            <br><br>
-            <label for="tueSnack1">Tuesday Snack 1:</label>
-            <input type="text" id="tueSnack1">
-            <br><br>
-            <label for="tueLunch">Tuesday Lunch:</label>
-            <input type="text" id="tueLunch">
-            <br><br>
-            <label for="tueSnack2">Tuesday Snack 2:</label>
-            <input type="text" id="tueSnack2">
-            <br><br>
-            <label for="tueDinner">Tuesday Dinner:</label>
-            <input type="text" id="tueDinner">
-            <br><br>
+        <!-- tuesday labels -->
+        <label for="tueBreakfast">Tuesday Breakfast:</label>
+        <input type="text" id="tueBreakfast">
+        <br><br>
+        <label for="tueSnack1">Tuesday Snack 1:</label>
+        <input type="text" id="tueSnack1">
+        <br><br>
+        <label for="tueLunch">Tuesday Lunch:</label>
+        <input type="text" id="tueLunch">
+        <br><br>
+        <label for="tueSnack2">Tuesday Snack 2:</label>
+        <input type="text" id="tueSnack2">
+        <br><br>
+        <label for="tueDinner">Tuesday Dinner:</label>
+        <input type="text" id="tueDinner">
+        <br><br>
 
-            <!-- wednnesday labels -->
-            <label for="wedBreakfast">Wednesday Breakfast:</label>
-            <input type="text" id="wedBreakfast">
-            <br><br>
-            <label for="wedSnack1">Wednesday Snack 1:</label>
-            <input type="text" id="wedSnack1">
-            <br><br>
-            <label for="wedLunch">Wednesday Lunch:</label>
-            <input type="text" id="wedLunch">
-            <br><br>
-            <label for="wedSnack2">Wednesday Snack 2:</label>
-            <input type="text" id="wedSnack2">
-            <br><br>
-            <label for="wedDinner">Wednesday Dinner:</label>
-            <input type="text" id="wedDinner">
-            <br><br>
+        <!-- wednnesday labels -->
+        <label for="wedBreakfast">Wednesday Breakfast:</label>
+        <input type="text" id="wedBreakfast">
+        <br><br>
+        <label for="wedSnack1">Wednesday Snack 1:</label>
+        <input type="text" id="wedSnack1">
+        <br><br>
+        <label for="wedLunch">Wednesday Lunch:</label>
+        <input type="text" id="wedLunch">
+        <br><br>
+        <label for="wedSnack2">Wednesday Snack 2:</label>
+        <input type="text" id="wedSnack2">
+        <br><br>
+        <label for="wedDinner">Wednesday Dinner:</label>
+        <input type="text" id="wedDinner">
+        <br><br>
 
-            <!-- thursday labels -->
-            <label for="thurBreakfast">Thursday Breakfast:</label>
-            <input type="text" id="thurBreakfast">
-            <br><br>
-            <label for="thurSnack1">Thursday Snack 1:</label>
-            <input type="text" id="thurSnack1">
-            <br><br>
-            <label for="thurLunch">Thursday Lunch:</label>
-            <input type="text" id="thurLunch">
-            <br><br>
-            <label for="thurSnack2">Thursday Snack 2:</label>
-            <input type="text" id="thurSnack2">
-            <br><br>
-            <label for="thurDinner">Thursday Dinner:</label>
-            <input type="text" id="thurDinner">
-            <br><br>
+        <!-- thursday labels -->
+        <label for="thurBreakfast">Thursday Breakfast:</label>
+        <input type="text" id="thurBreakfast">
+        <br><br>
+        <label for="thurSnack1">Thursday Snack 1:</label>
+        <input type="text" id="thurSnack1">
+        <br><br>
+        <label for="thurLunch">Thursday Lunch:</label>
+        <input type="text" id="thurLunch">
+        <br><br>
+        <label for="thurSnack2">Thursday Snack 2:</label>
+        <input type="text" id="thurSnack2">
+        <br><br>
+        <label for="thurDinner">Thursday Dinner:</label>
+        <input type="text" id="thurDinner">
+        <br><br>
 
-            <!-- friday labels -->
-            <label for="friBreakfast">Friday Breakfast:</label>
-            <input type="text" id="friBreakfast">
-            <br><br>
-            <label for="friSnack1">Friday Snack 1:</label>
-            <input type="text" id="friSnack1">
-            <br><br>
-            <label for="friLunch">Friday Lunch:</label>
-            <input type="text" id="friLunch">
-            <br><br>
-            <label for="friSnack2">Friday Snack 2:</label>
-            <input type="text" id="friSnack2">
-            <br><br>
-            <label for="friDinner">Friday Dinner:</label>
-            <input type="text" id="friDinner">
-            <br><br>
+        <!-- friday labels -->
+        <label for="friBreakfast">Friday Breakfast:</label>
+        <input type="text" id="friBreakfast">
+        <br><br>
+        <label for="friSnack1">Friday Snack 1:</label>
+        <input type="text" id="friSnack1">
+        <br><br>
+        <label for="friLunch">Friday Lunch:</label>
+        <input type="text" id="friLunch">
+        <br><br>
+        <label for="friSnack2">Friday Snack 2:</label>
+        <input type="text" id="friSnack2">
+        <br><br>
+        <label for="friDinner">Friday Dinner:</label>
+        <input type="text" id="friDinner">
+        <br><br>
 
-            <!-- saturday labels -->
-            <label for="satBreakfast">Saturday Breakfast:</label>
-            <input type="text" id="satBreakfast">
-            <br><br>
-            <label for="satSnack1">Saturday Snack 1:</label>
-            <input type="text" id="satSnack1">
-            <br><br>
-            <label for="satLunch">Saturday Lunch:</label>
-            <input type="text" id="satLunch">
-            <br><br>
-            <label for="satSnack2">Saturday Snack 2:</label>
-            <input type="text" id="satSnack2">
-            <br><br>
-            <label for="satDinner">Saturday Dinner:</label>
-            <input type="text" id="satDinner">
-            <br><br>
+        <!-- saturday labels -->
+        <label for="satBreakfast">Saturday Breakfast:</label>
+        <input type="text" id="satBreakfast">
+        <br><br>
+        <label for="satSnack1">Saturday Snack 1:</label>
+        <input type="text" id="satSnack1">
+        <br><br>
+        <label for="satLunch">Saturday Lunch:</label>
+        <input type="text" id="satLunch">
+        <br><br>
+        <label for="satSnack2">Saturday Snack 2:</label>
+        <input type="text" id="satSnack2">
+        <br><br>
+        <label for="satDinner">Saturday Dinner:</label>
+        <input type="text" id="satDinner">
+        <br><br>
 
-            <!-- sunday labels -->
-            <label for="sunBreakfast">Sunday Breakfast:</label>
-            <input type="text" id="sunBreakfast">
-            <br><br>
-            <label for="sunSnack1">Sunday Snack 1:</label>
-            <input type="text" id="sunSnack1">
-            <br><br>
-            <label for="sunLunch">Sunday Lunch:</label>
-            <input type="text" id="sunLunch">
-            <br><br>
-            <label for="sunSnack2">Sunday Snack 2:</label>
-            <input type="text" id="sunSnack2">
-            <br><br>
-            <label for="sunDinner">Sunday Dinner:</label>
-            <input type="text" id="sunDinner">
-            <br><br>
+        <!-- sunday labels -->
+        <label for="sunBreakfast">Sunday Breakfast:</label>
+        <input type="text" id="sunBreakfast">
+        <br><br>
+        <label for="sunSnack1">Sunday Snack 1:</label>
+        <input type="text" id="sunSnack1">
+        <br><br>
+        <label for="sunLunch">Sunday Lunch:</label>
+        <input type="text" id="sunLunch">
+        <br><br>
+        <label for="sunSnack2">Sunday Snack 2:</label>
+        <input type="text" id="sunSnack2">
+        <br><br>
+        <label for="sunDinner">Sunday Dinner:</label>
+        <input type="text" id="sunDinner">
+        <br><br>
 
-            <!-- webpage buttons -->
-            <input type="button" id="generatePlan" value="Generate Meal Plan">
-            <input type="button" id="clearPlan" value="Clear Meal Plan">
-        </div>
-    </form>
+        <!-- webpage buttons -->
+        <input type="button" id="generatePlan" value="Generate Meal Plan">
+        <input type="button" id="clearPlan" value="Clear Meal Plan">
+        <!-- print button will be in the new tab -->
+    </div>
 
     <!-- calling javascript file -->
     <script src="projectJS.js"></script>
