small edits 26 april

--- a/finalProject.html
+++ b/finalProject.html
@@ -67,7 +67,8 @@
             <h2>Build Your Meal Plan</h2>
         </div>
     </div>
-
+    <!-- form id used to clear the form -->
+    <form id="form">
     <div class="center">
         <!-- personal information labels -->
         <br><br>
