Minor changes: 26 April 4:55pm

--- a/finalProject.html
+++ b/finalProject.html
@@ -59,7 +59,8 @@
 <body>
     <!-- using div class to center the text -->
     <div class="banner">
-        <img src="ppp.png" alt="Perfectly Portioned Fitness Logo">
+        <!-- adding png of logo into banner -->
+        <img src="ppp.png">
         <div>
             <h1>Perfectly Portioned Fitness</h1>
             <!-- name, course, section number -->
