small changes 26 april 8:13pm

--- a/finalProject.html
+++ b/finalProject.html
@@ -60,7 +60,7 @@
     <!-- using div class to center the text -->
     <div class="banner">
         <!-- adding png of logo into banner -->
-        <img src="ppp.png">
+        <img src="ppf.png">
         <div>
             <h1>Perfectly Portioned Fitness</h1>
             <!-- name, course, section number -->
@@ -69,6 +69,7 @@
         </div>
     </div>
     <!-- form id used to clear the form -->
+    <!-- this will be called in the javascript file -->
     <form id="form">
     <div class="center">
         <!-- personal information labels -->
