--- a/finalProject.html
+++ b/finalProject.html
@@ -56,6 +56,7 @@
             font-size: 16px;
         }
     </style>
+    <!-- end of styling -->
 <body>
     <!-- using div class to center the text -->
     <div class="banner">
@@ -65,10 +66,11 @@
             <h1>Perfectly Portioned Fitness</h1>
             <!-- name, course, section number -->
             <p>Austin Carranza WEB.115.0006</p>
+            <p>Final Project for WEB-115 Sections 6</p>
             <h2>Build Your Meal Plan</h2>
         </div>
     </div>
-    <!-- form id used to clear the form -->
+    <!-- form id tag to clear the form -->
     <!-- this will be called in the javascript file -->
     <form id="form">
     <div class="center">
@@ -204,11 +206,13 @@
         <input type="text" id="sunDinner">
         <br><br>
 
+        <p>NOTE: There will be a print/download button attached to the generated planner</p>
         <!-- webpage buttons -->
-        <input type="button" id="generatePlan" value="Generate Meal Plan">
-        <input type="button" id="clearPlan" value="Clear Meal Plan">
-        <!-- print button will be in the new tab -->
+        <input type="button" id="generatePlanner" value="Generate Meal Plan">
+        <input type="button" id="clearPlanner" value="Clear Meal Plan">
+        <br><br><br><br>
     </div>
+    </form>
 
     <!-- calling javascript file -->
     <script src="projectJS.js"></script>
