--- a/finalProject.html
+++ b/finalProject.html
@@ -66,7 +66,7 @@
             <h1>Perfectly Portioned Fitness</h1>
             <!-- name, course, section number -->
             <p>Austin Carranza WEB.115.0006</p>
-            <p>Final Project for WEB-115 Sections 6</p>
+            <p>Final Project for WEB-115 Section 6</p>
             <h2>Build Your Meal Plan</h2>
         </div>
     </div>
